Bug 294608 - Catapult effect during kinetic spinning when Marble stalls
Summary: Catapult effect during kinetic spinning when Marble stalls
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-22 12:36 UTC by Bernhard Beschow
Modified: 2012-02-22 18:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2012-02-22 12:36:22 UTC
Version:           unspecified (using KDE 4.8.0) 
OS:                Linux

When Marble stalls during kinetic spinning (e.g. when tile updates arrive during panning), the map position is sometimes changed abruptly to a very far location.

Reproducible: Always

Steps to Reproduce:
1. Choose a map theme with several layers of tiles and activate all tile layers
2. Pan the map very fast
3. Hit some area that needs tile updates
4. Start kinetic spinning

Actual Results:  
Kinetic spinning "catapults" the map to a very far location after the stall is over.

Expected Results:  
Kinetic spinning should behave in a predictable way (no catapult effect).
Comment 1 Bernhard Beschow 2012-02-22 12:43:16 UTC
Git commit 0884ecd2dc81b1ea5ef23276a159e0559f39d1cc by Bernhard Beschow.
Committed on 22/02/2012 at 13:37.
Pushed by beschow into branch 'master'.

reduce catapult effect during kinetic spinning in some cases

M  +1    -1    src/lib/kineticmodel.cpp

http://commits.kde.org/marble/0884ecd2dc81b1ea5ef23276a159e0559f39d1cc
Comment 2 Bernhard Beschow 2012-02-22 14:35:35 UTC
Git commit 58f57c7ad9e5fdcee218a5db9a0acf47fde7aa55 by Bernhard Beschow.
Committed on 22/02/2012 at 13:37.
Pushed by beschow into branch 'KDE/4.8'.

reduce catapult effect during kinetic spinning in some cases
FIXED-IN: 1.3.1
(cherry picked from commit 0884ecd2dc81b1ea5ef23276a159e0559f39d1cc)

M  +1    -1    src/lib/kineticmodel.cpp

http://commits.kde.org/marble/58f57c7ad9e5fdcee218a5db9a0acf47fde7aa55
Comment 3 Bernhard Beschow 2012-02-22 18:40:47 UTC
Git commit 43692ed793e53517a8b8e9301fc59a0b098679fc by Bernhard Beschow.
Committed on 22/02/2012 at 13:37.
Pushed by beschow into branch 'Touch/1.3'.

reduce catapult effect during kinetic spinning in some cases
FIXED-IN: 1.3.1
(cherry picked from commit 0884ecd2dc81b1ea5ef23276a159e0559f39d1cc)

M  +1    -1    src/lib/kineticmodel.cpp

http://commits.kde.org/marble/43692ed793e53517a8b8e9301fc59a0b098679fc