reduce catapult effect during kinetic spinning in some cases

BUG: 294608
FIXED-IN: 1.3.1
(cherry picked from commit 0884ecd2dc81b1ea5ef23276a159e0559f39d1cc)