src/lib/kineticmodel.cpp
@@ -163,7 +163,7 @@ void KineticModel::update()
 {
     Q_D(KineticModel);
 
-    int elapsed = d->timestamp.elapsed();
+    int elapsed = qMin( d->timestamp.elapsed(), 100 ); // limit to 100msec to reduce catapult effect (bug 294608)
     qreal delta = static_cast<qreal>(elapsed) / 1000.0;
 
     d->position += d->velocity * delta;
